# panoEditor

./: .gitignore  CMakeLists.txt  README.md
src/: glwidget.cpp  glwidget.h  imagedisplay.cpp  imagedisplay.h  imagesphereviewer.cpp  imagesphereviewer.h  logo.cpp  logo.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  openglwindow.cpp  openglwindow.h  utilities.h  window.cpp  window.h
src/shaders/: computeShader.txt  fragmentShader.txt  vertexShader.txt
